// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DownloadableDocumentsList > should match snapshot 1`] = `
<body>
  <div>
    <section
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1w5x330-MuiPaper-root"
    >
      <div
        class="MuiStack-root css-jfdv4h-MuiStack-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-overline css-b3fch5-MuiTypography-root"
        >
          Download
        </h2>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      >
        <ul
          class="MuiStack-root css-13r94rd-MuiStack-root"
        >
          <li
            class="MuiBox-root css-0"
          >
            <button
              class="MuiTypography-root MuiTypography-body2 MuiLink-root MuiLink-underlineHover MuiLink-button css-ird2g-MuiTypography-root-MuiLink-root"
            >
              <span
                class="MuiStack-root css-ae0xht-MuiStack-root"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="AttachFileIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"
                  />
                </svg>
                 
                <span>
                  Document 1
                </span>
                 
              </span>
            </button>
          </li>
          <li
            class="MuiBox-root css-0"
          >
            <button
              class="MuiTypography-root MuiTypography-body2 MuiLink-root MuiLink-underlineHover MuiLink-button css-ird2g-MuiTypography-root-MuiLink-root"
            >
              <span
                class="MuiStack-root css-ae0xht-MuiStack-root"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="AttachFileIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"
                  />
                </svg>
                 
                <span>
                  Document 2
                </span>
                 
              </span>
            </button>
          </li>
        </ul>
      </div>
    </section>
  </div>
</body>
`;

exports[`DownloadableDocumentsList > should match snapshot on empty documents list 1`] = `
<body>
  <div>
    <section
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1w5x330-MuiPaper-root"
    >
      <div
        class="MuiStack-root css-jfdv4h-MuiStack-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-overline css-b3fch5-MuiTypography-root"
        >
          Download
        </h2>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      >
        <p
          class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
        >
          noDataLabel
        </p>
      </div>
    </section>
  </div>
</body>
`;
